--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "generouted": "^1.19.4",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-scrolling-color-background": "^1.0.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
